# rustride

./: .env.example  .gitignore  Cargo.toml  build.rs  docker
.github/workflows/: master.yml
migrations/: 001_init.sql
proto/: auth.proto  driver.proto  message.proto  notification.proto  order.proto  poi.proto  ridehailing.proto
ridehailing/: opencollection.yml
src/: auth.rs  config.rs  connections.rs  context.rs  location.rs  main.rs  state.rs  throttle.rs
src/grpc/: auth.rs  driver.rs  location.rs  message.rs  mod.rs  notification.rs  order.rs  rideshare.rs  trip.rs  webrtc.rs
src/models/: message.rs  mod.rs  order.rs  user.rs
src/proto/: mod.rs
src/repository/: db.rs  driver.rs  message.rs  mod.rs  notification.rs  order.rs  poi.rs  rideshare.rs  user.rs
src/service/: auth.rs  chat.rs  driver.rs  mod.rs  notification.rs  order.rs  rideshare.rs  tests.rs
src/utils/: mod.rs  ulid.rs
