[package]
name = "ridehailing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ridehailing"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database — mysql_async only
mysql_async = { version = "0.36.1", features = ["default"] }

# Redis (driver geo-location + driver order state)
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.18.0"

# Async trait
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2.0.18"
geohash = "0.13.1"

[build-dependencies]
tonic-build = "0.11"
