[package]
name = "ridehailing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ridehailing"
path = "src/main.rs"

[dependencies]
# gRPC stack — semua harus satu keluarga
tonic = "0.13"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }

dashmap = "6"
flume = "0.11"
ahash = "0.8"

jsonwebtoken = "9"
bcrypt = "0.15"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
geohash = "0.13"
openssl = { version = "0.10", features = ["vendored"] }

aws-config = "1"
aws-sdk-s3 = "1"
infer = "0.16"

reqwest = { version = "0.13.2", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.2.1"
rand = "0.9"
tracing = "0.1.44"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.17" }
rust_decimal = { version = "1.41.0", features = ["tokio-postgres"] }
rust_decimal_macros = "1.35"
hex = "0.4"
scopeguard = "1.2.0"


[build-dependencies]
tonic-build = "0.13"
